# jenkins-mcp-halo

./: .gitignore  Dockerfile  README copy.md  README.md  smithery.yaml
mcp-server-jenkins-master/: .dockerignore  .pre-commit-config.yaml  LICENSE  README.md  bake.sh  main.py  pyproject.toml  run.sh
mcp-server-jenkins-master/src/mcp_jenkins/: __init__.py
mcp-server-jenkins-master/src/mcp_jenkins/jenkins/: __init__.py  _build.py  _client.py  _job.py  _node.py  _queue_item.py
mcp-server-jenkins-master/src/mcp_jenkins/models/: build.py  job.py  node.py  queue_item.py
mcp-server-jenkins-master/src/mcp_jenkins/server/: __init__.py  build.py  job.py  node.py  queue_item.py
mcp-server-jenkins-master/tests/: conftest.py
mcp-server-jenkins-master/tests/test_jenkins/: test_build.py  test_job.py  test_node.py  test_queue_item.py
