[project]
name = "mcp-jenkins"
version = "0.3.6"
description = "The Model Context Protocol (MCP) is an open-source implementation that bridges Jenkins with AI language models following Anthropic's MCP specification. This project enables secure, contextual AI interactions with Jenkins tools while maintaining data privacy and security."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.11.1",
    "python-jenkins>=1.8.2",
    "beautifulsoup4>=4.12.2",
]

[[project.authors]]
name = "lanbaoshen"
email = "lanbaoshen@icloud.com"

[project.scripts]
mcp-jenkins = "mcp_jenkins:main"

[dependency-groups]
dev = [
    "mcp[cli]>=1.6.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
    "uv>=0.6.12",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

lint.select = ["E", "F", "B", "W", "I", "N", "UP", "ANN", "S", "BLE", "FBT", "C4", "DTZ", "T10", "EM", "ISC", "ICN"]
lint.ignore = ["ANN401", "EM101", "N815"]
lint.fixable = ["ALL"]
lint.unfixable = []
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
lint.per-file-ignores."tests/**/*.py" = ["S", "ANN", "B017"]

format.quote-style = "single"
format.indent-style = "space"
format.skip-magic-trailing-comma = false
format.line-ending = "auto"
